# VIBES

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile.min  LICENSE  Makefile  README.md  dune-project  vibes.opam
bap-vibes/: Makefile  README.md  bap-vibes.opam
bap-vibes/src/: arm_selector.ml  arm_selector.mli  bir_helpers.ml  bir_helpers.mli  bir_opt.ml  bir_opt.mli  bir_passes.ml  bir_passes.mli  compiler.ml  compiler.mli  config.ml  config.mli  congruence.ml  congruence.mli  constants.ml  constants.mli  core_c.ml  core_c.mli  core_notations.ml  data.ml  data.mli  dune  errors.ml  errors.mli  events.ml  events.mli  exe_info.ml  exe_info.mli  exe_ingester.ml  exe_ingester.mli  exe_loader.ml  exe_loader.mli  flatten.ml  flatten.mli  gir.ml  higher_var.ml  higher_var.mli  ir.ml  ir.mli  isel.ml  (+38 more)
bap-vibes/tests/: test.ml  test_minizinc.ml  test_vibes_ir.ml
bap-vibes/tests/integration/: cli.ml  dune  patches.ml  test.conf  test.ml  test_dummy.ml  test_minizinc.ml
bap-vibes/tests/unit/: dune  helpers.ml  patches.ml  test.ml  test_arm_selector.ml  test_bir_opt.ml  test_compiler.ml  test_exe_info.ml  test_exe_ingester.ml  test_ir.ml  test_linear_ssa.ml  test_minizinc.ml  test_opt.ml  test_parse_c.ml  test_patch_c.ml  test_patch_ingester.ml  test_patcher.ml  test_substituter.ml  test_verifier.ml
plugin/: Makefile  README.md  vibes.ml  vibes.opam
plugin/lib/: config.ml  config.mli  constants.ml  errors.ml  errors.mli  parameters.ml  parameters.mli  utils.ml  utils.mli  vibes_plugin_constants.ml  vibes_plugin_errors.ml  vibes_plugin_errors.mli  vibes_plugin_parameters.ml  vibes_plugin_parameters.mli  vibes_plugin_utils.ml  vibes_plugin_utils.mli
plugin/tests/: dune  helpers.ml  test.ml  test_arm_exes.ml
src/lib/: Makefile  arm_gen.ml  arm_gen.mli  bap_vibes.opam  compiler.ml  compiler.mli  config.ml  config.mli  dune  errors.ml  errors.mli  events.ml  exe_loader.ml  exe_loader.mli  patcher.ml  patcher.mli  patches.ml  pipeline.ml  utils.ml  utils.mli  verbose.ml  verifier.ml  vibes_ir.ml  vibes_ir.mli
vibes-tools/tools/: Makefile  README.md  dune-project  vibes-tools.opam
vibes-tools/tools/vibes-as/: README.md  dune-project  vibes-as.opam
vibes-tools/tools/vibes-as/lib/: dune  errors.ml  opt.ml  opt.mli  runner.ml  runner.mli  solver.ml  solver.mli  types.ml  types.mli  utils.ml  utils.mli
vibes-tools/tools/vibes-as/test/: test_arm.ml
vibes-tools/tools/vibes-bir/: README.md
vibes-tools/tools/vibes-bir/lib/: dune  errors.ml  helpers.ml  helpers.mli  tags.ml  tags.mli  types.ml
vibes-tools/tools/vibes-c-toolkit/: README.md
vibes-tools/tools/vibes-c-toolkit/lib/: c_utils.ml  c_utils.mli  core_c.ml  core_c.mli  ctype.ml  ctype.mli  dune  errors.ml  higher_var.ml  kb_error.ml  parse_c.ml  parse_c.mli  patch_c.ml  patch_c.mli  substituter.ml  types.ml
vibes-tools/tools/vibes-c-toolkit/test/: dune  test_core.ml  test_parse.ml
vibes-tools/tools/vibes-common-cli-options/: README.md
vibes-tools/tools/vibes-common-cli-options/lib/: dune  language.ml  (+9 more)
vibes-tools/tools/vibes-constants/: README.md  vibes-constants.opam
vibes-tools/tools/vibes-error/: README.md
vibes-tools/tools/vibes-function-info/: README.md  dune-project  vibes-function-info.opam
vibes-tools/tools/vibes-higher-vars/: README.md
vibes-tools/tools/vibes-ir/: vibes-ir.opam
vibes-tools/tools/vibes-linear-ssa/: README.md  vibes-linear-ssa.opam
vibes-tools/tools/vibes-log/: README.md  dune-project
vibes-tools/tools/vibes-minizinc/: dune-project
vibes-tools/tools/vibes-opt/: Makefile  README.md  dune-project  vibes-opt.opam
vibes-tools/tools/vibes-parse/: Makefile  README.md  vibes-parse.opam
vibes-tools/tools/vibes-patch/: README.md  dune-project
vibes-tools/tools/vibes-patch-info/: README.md  dune-project
vibes-tools/tools/vibes-patcher/: Makefile  README.md
vibes-tools/tools/vibes-playground/: README.md
vibes-tools/tools/vibes-serializers/: README.md  vibes-serializers.opam
vibes-tools/tools/vibes-utils/: README.md
(+812 files in other folders)
