opam-version: "2.0"
name: "bap-vibes"
version: "0.0.1"
synopsis: "The VIBES library"
description: """
A CEGIS-driven binary patcher library.
"""
maintainer: "Draper Laboratory"
authors: "Draper Laboratory"
license: "MIT"
homepage: "https://github.com/draperlaboratory/VIBES-internal"
bug-reports: "https://github.com/draperlaboratory/VIBES-internal"
dev-repo: "git://github.com/draperlaboratory/VIBES-internal"
depends: [
  "bap"
  "bap-arm"
  "bap_wp"
  "core_kernel"
  "ounit2"
  "yojson"
  "ppx_deriving_yojson"
  "ppx_jane"
  "z3"
  "result"
]
build: [
  [make]
]
