opam-version: "2.0"
name: "vibes"
version: "0.1.0"
synopsis: "The VIBES command-line tool"
description: """
A CEGIS-driven binary patcher.
"""
maintainer: "Draper Laboratory"
authors: "Draper Laboratory"
license: "MIT"
homepage: "https://github.com/draperlaboratory/VIBES"
bug-reports: "https://github.com/draperlaboratory/VIBES"
dev-repo: "git://github.com/draperlaboratory/VIBES"
depends: [
  "bap"
  "bap_wp"
  "bap-vibes" 
]
build: [
  [make]
]
