opam-version: "2.0"
name: "vibes-tools"
version: "0.0.1"
synopsis: "Tools and libraries associated with the VIBES project."
description: """
Verified, Incremental Binary Editing with Synthesis.
"""
maintainer: "Draper Laboratory"
authors: "Draper Laboratory"
depends: [
  "bap"
  "core"
  "FrontC"
  "yojson"
]
build: [
  [make]
]
