(include_subdirs unqualified)

(library
 (name vibes_as)
 (public_name vibes-as)
 (flags -w -32)
 (libraries
   bap-core-theory
   findlib.dynload
   threads
   vibes-log
   vibes-constants
   vibes-utils
   vibes-serializers
   vibes-ir
   vibes-minizinc
   vibes-select)
 (preprocess (pps ppx_fields_conv ppx_sexp_conv)))
